k8s/petclinic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  strategy: {}
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: mysql
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://mysql:3306/petclinic
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: demo-db
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: demo-db
        image: ghcr.io/abdullah-hamada7/spring-petclinic-repo/spring-petclinic:68099a9d483dfcc2415e936b735f5b3901edc8c9
        name: app
        ports:
        - containerPort: 8080
        resources: {}
status: {}
