k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080
